[DTR-3929] allow user to scroll in smaller screens to avoid overflow / other issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,8 +33,15 @@
 }
 
 /* Return history table width */
+
+.return-history-table-wrapper {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .return-history-table {
   width: 100%;
+  min-width: 640px;
 }
 
 .return-history-table .rh-col-period {width : 22%;}
